@@ -4,6 +4,7 @@ Repository head::
      Bug fix for incremental mirroring.
      Avoid creating dyuplicate dag names when a tag turns intio a branch
      Enforce stable order of subnode traversals when doing node expansion.
+     Added repocutter -t option to tag error messages from pipelines.
 
 4.27: 2021-05-27::
      repocutter pathrename can do multiple path transforms in one command.
